--- a/assets/css/admin_ssj.css
+++ b/assets/css/admin_ssj.css
@@ -1,2 +1,29 @@
 @charset "utf-8";
-@import url("common.css");
+
+
+
+/** HEADER **/
+header.admin_header {width:100%;background: #222222;height: 80px;padding: 0 40px;display: flex;align-items: center;position:relative;z-index:30;text-align:center;border-bottom: 1px solid #ECEEF0;box-shadow: 0px 4px 10px 0px #0000001A;min-width:1440px;box-sizing: border-box;}
+.admin_header .logo{display: flex;align-items: center;gap: 16px;}
+.admin_header .logo span{display:block;}
+.admin_header .logo .logo_img{width:121px;height:32px;background:url(../images/svg/logo_white.svg) no-repeat 0 0;background-size:contain;}
+.admin_header .logo .logo_text{color: var(--Grayscale-400);}
+
+.admin_header .gnb{display:flex;align-items:center;justify-content: center;width: 50%;flex-grow: 1;margin:0 auto;}
+.admin_header .gnb>li{position:relative;}
+.admin_header .gnb>li>a{color:#fff;padding:12px;}
+.admin_header .gnb>li.active{display:flex;flex-direction:row;justify-content:center;}
+.admin_header .gnb>li.active>a{color:#4C9AED;position:relative;font-size:18px;font-weight:700;line-height:23px;letter-spacing: 0px;}
+.admin_header .gnb>li.active>a::after{content:'';display:block;width:20px;height:2px;background:#4C9AED;position:absolute;top:39px;left:0;right:0;margin:0 auto;}
+
+.admin_header .btnzone {}
+.admin_header .btnzone .btn-logout {background:var(--Grayscale-600); color:#F2F3F4;}
+.admin_header .btnzone .btn-logout span {opacity:0.5;}
+.admin_header .btnzone .btn-logout .ico_arr {background-image:url(../images/svg/arr_btn_white.svg); opacity:0.5;}
+
+/** FOOTER **/
+footer.footer{width:100%;height:66px; text-align:left;background:#fff;border-top:1px solid #EEEFF5;}
+.footer_div{width:1440px;height:inherit;margin:0 auto;padding:19px 0 19px 400px;position:relative}
+.foot_logo{width:106px;height:28px;position:absolute;left:40px;top:19px;}
+.footer_div .address {font-size:12px;color:#858B93;}
+.footer_div .copyright {font-size:11px;color:#B5B9C0;}
