--- a/assets/css/admin_ssj.css
+++ b/assets/css/admin_ssj.css
@@ -2,7 +2,7 @@
 
 
 
-/** HEADER **/
+/** admin HEADER **/
 header.admin_header {width:100%;background: #222222;height: 80px;padding: 0 40px;display: flex;align-items: center;position:relative;z-index:30;text-align:center;border-bottom: 1px solid #ECEEF0;box-shadow: 0px 4px 10px 0px #0000001A;min-width:1440px;box-sizing: border-box;}
 .admin_header .logo{display: flex;align-items: center;gap: 16px;}
 .admin_header .logo span{display:block;}
@@ -16,10 +16,10 @@ header.admin_header {width:100%;background: #222222;height: 80px;padding: 0 40px
 .admin_header .gnb>li.active>a{color:#4C9AED;position:relative;font-size:18px;font-weight:700;line-height:23px;letter-spacing: 0px;}
 .admin_header .gnb>li.active>a::after{content:'';display:block;width:20px;height:2px;background:#4C9AED;position:absolute;top:39px;left:0;right:0;margin:0 auto;}
 
-.admin_header .btnzone {}
 .admin_header .btnzone .btn-logout {background:var(--Grayscale-600); color:#F2F3F4;}
 .admin_header .btnzone .btn-logout span {opacity:0.5;}
 .admin_header .btnzone .btn-logout .ico_arr {background-image:url(../images/svg/arr_btn_white.svg); opacity:0.5;}
+
 
 /** FOOTER **/
 footer.footer{width:100%;height:66px; text-align:left;background:#fff;border-top:1px solid #EEEFF5;}
@@ -27,3 +27,22 @@ footer.footer{width:100%;height:66px; text-align:left;background:#fff;border-top
 .foot_logo{width:106px;height:28px;position:absolute;left:40px;top:19px;}
 .footer_div .address {font-size:12px;color:#858B93;}
 .footer_div .copyright {font-size:11px;color:#B5B9C0;}
+
+
+
+/** admin snb **/
+.admin_container {min-height: calc(100vh - 146px) !important;}
+.admin_container .content_wrap {align-items: stretch;min-height: calc(100vh - 146px);}
+.admin_container .left_filter_cont {}
+.admin_container .left_filter_cont ul {}
+.admin_container .left_filter_cont ul li {height: 64px;display: flex;align-items: center;padding: 0 24px;}
+.admin_container .left_filter_cont ul li a {color:var(--Text-400);flex-grow: 1;display: flex;align-items: center;height: 100%;gap: 16px;}
+.admin_container .left_filter_cont ul li.active {background:rgba(202,240,248,0.3);}
+.admin_container .left_filter_cont ul li.active a {color:var(--fontColor);}
+.admin_container .left_filter_cont ul li i.ico_snb {background-repeat: no-repeat;background-position: center;width: 24px;height: 24px;display: inline-block;}
+.admin_container .left_filter_cont ul li i.admin_snb01 {background-image: url("../images_admin/admin_ico-snb01.svg");}
+.admin_container .left_filter_cont ul li i.admin_snb02 {background-image: url("../images_admin/admin_ico-snb02.svg");}
+.admin_container .left_filter_cont ul li i.admin_snb03 {background-image: url("../images_admin/admin_ico-snb03.svg");}
+.admin_container .left_filter_cont ul li i.admin_snb04 {background-image: url("../images_admin/admin_ico-snb04.svg");}
+.admin_container .left_filter_cont ul li i.admin_snb05 {background-image: url("../images_admin/admin_ico-snb05.svg");}
+.admin_container .left_filter_cont ul li i.admin_snb06 {background-image: url("../images_admin/admin_ico-snb06.svg");}
