--- a/assets/css/admin_osy.css
+++ b/assets/css/admin_osy.css
@@ -1,2 +1,29 @@
 @charset "utf-8";
 @import url("common.css");
+
+
+/* common */
+.space-between {align-content:space-between;}
+
+
+/* 시스템관리 - 메인 대시보드 */
+.admin_container .main_content {display:flex; flex-direction:column; gap:64px; width:100%; padding-top:80px; padding-bottom:80px;}
+/* 대시보드 */
+.admin_container .main_dashboard_wrap {display:flex; align-items:center; height:355px; gap:64px;}
+.admin_container .dashboard_box {flex-grow:1; display:inline-flex; flex-flow:row wrap; width:calc(100% / 3); height:300px; padding:40px; background-color:#fff; border-radius:8px; box-sizing:border-box; box-shadow:8px 8px 16px #0000001A;}
+.admin_container .dashboard_box .content_group {display:flex; justify-content:space-between; align-items:center; gap:40px; width:100%;}
+.admin_container .dashboard_box .content_group img {max-width:124px;}
+.admin_container .dashboard_box .content_group + button span {color:var(--Grayscale-600);}
+.admin_container .content_group .text_box {width:100%; display:flex; flex-direction:column; justify-content:center; gap:16px;}
+.admin_container .content_group .text_box .title {text-align:center; color:var(--Grayscale-500); letter-spacing:-1px;}
+.admin_container .content_group .text_box .S-DarkB {color:var(--Secondary-DarkBlue);}
+.admin_container .content_group .text_box .count {display:flex; justify-content:center; gap:10px; width:100%; color:var(--Text-500); letter-spacing:-1px;}
+/* 링크배너 영역 */
+.admin_container .main_linkbnr_wrap .linkbnr {display:flex; gap:32px; width:100%;}
+.admin_container .main_linkbnr_wrap .linkbnr .banner {position:relative; display:inline-flex; flex-direction:column; justify-content:center; align-items:flex-start; flex-grow:1; gap:40px; width:calc(100% / 4); padding:40px 30px; border-radius:8px; box-sizing:border-box;}
+.admin_container .main_linkbnr_wrap .linkbnr .banner:not(:first-child):before {position:absolute; top:8px; left:-17px; content:''; width:1px; height:calc(100% - 16px); background-color:#B5B9C0;}
+.admin_container .main_linkbnr_wrap .linkbnr .banner .icon_box {display:inline-flex; justify-content:center; align-items:center; width:128px; height:128px; padding:24px; margin-left:auto; margin-right:auto; background-color:#fff; border-radius:999px;}
+.admin_container .main_linkbnr_wrap .linkbnr .banner .icon_box img {max-width:100%; max-height:100%;}
+.admin_container .main_linkbnr_wrap .linkbnr .banner .text_box {display:flex; flex-direction:column; gap:24px; width:100%; padding-top:8px; padding-bottom:8px;}
+.admin_container .main_linkbnr_wrap .linkbnr .banner .text_box .title {width:100%; text-align:center; letter-spacing:-1px;}
+.admin_container .main_linkbnr_wrap .linkbnr .banner .text_box .text {width:100%; text-align:center;}
