--- a/assets/css/admin_osy.css
+++ b/assets/css/admin_osy.css
@@ -26,4 +26,4 @@
 .admin_container .main_linkbnr_wrap .linkbnr .banner .icon_box img {max-width:100%; max-height:100%;}
 .admin_container .main_linkbnr_wrap .linkbnr .banner .text_box {display:flex; flex-direction:column; gap:24px; width:100%; padding-top:8px; padding-bottom:8px;}
 .admin_container .main_linkbnr_wrap .linkbnr .banner .text_box .title {width:100%; text-align:center; letter-spacing:-1px;}
-.admin_container .main_linkbnr_wrap .linkbnr .banner .text_box .text {width:100%; text-align:center;}
+.admin_container .main_linkbnr_wrap .linkbnr .banner .text_box .text {width:100%; text-align:center; color:var(--Secondary-DeepBlue);}
