--- a/assets/css/admin_ssj.css
+++ b/assets/css/admin_ssj.css
@@ -37,17 +37,13 @@ footer.footer{width:100%;height:66px; text-align:left;background:#fff;border-top
 .admin_container .left_filter_cont ul {}
 .admin_container .left_filter_cont ul li {height: 64px;display: flex;align-items: center;padding: 0 24px;}
 .admin_container .left_filter_cont ul li a {color:var(--Text-400);flex-grow: 1;display: flex;align-items: center;height: 100%;gap: 16px;}
+.admin_container .left_filter_cont ul li .ico_snb {background-repeat: no-repeat;background-position: center;width: 24px;height: 24px;display: inline-block;text-align: center;}
+.admin_container .left_filter_cont ul li .ico_snb img {display: inline-block; vertical-align: middle;}
 .admin_container .left_filter_cont ul li.active {background:rgba(202,240,248,0.3);}
 .admin_container .left_filter_cont ul li.active a {color:var(--fontColor);}
-.admin_container .left_filter_cont ul li i.ico_snb {background-repeat: no-repeat;background-position: center;width: 24px;height: 24px;display: inline-block;}
-.admin_container .left_filter_cont ul li i.admin_snb01 {background-image: url("../images_admin/admin_ico-snb01.svg");}
-.admin_container .left_filter_cont ul li i.admin_snb02 {background-image: url("../images_admin/admin_ico-snb02.svg");}
-.admin_container .left_filter_cont ul li i.admin_snb03 {background-image: url("../images_admin/admin_ico-snb03.svg");}
-.admin_container .left_filter_cont ul li i.admin_snb04 {background-image: url("../images_admin/admin_ico-snb04.svg");}
-.admin_container .left_filter_cont ul li i.admin_snb05 {background-image: url("../images_admin/admin_ico-snb05.svg");}
-.admin_container .left_filter_cont ul li i.admin_snb06 {background-image: url("../images_admin/admin_ico-snb06.svg");}
+.admin_container .left_filter_cont ul li.active .ico_snb img {filter: invert(12%) sepia(5%) saturate(10%) hue-rotate(15deg) brightness(0%) contrast(70%); }
 
-.admin_container .breadcrumb {margin-bottom:16px;}
+.admin_container .content>.breadcrumb {margin-bottom:16px;}
 
 
 /* 왼쪽에 트리가 위치하는 경우의 cont */
@@ -59,10 +55,60 @@ footer.footer{width:100%;height:66px; text-align:left;background:#fff;border-top
 .Wrap_tree_cont .l_Side .portlet_edit_left .p_edit_tab_wrap .p_edit_tab_cont {width: 100%; height: 100%;}
 .Wrap_tree_cont .r_Box {flex-grow: 1; display: flex; flex-direction: column; align-items: flex-end; gap: 10px;}
 .Wrap_tree_cont .r_Box .box-white {width: 100%;}
-.Wrap_tree_cont .r_Box .box-white .head20B {padding-bottom: 10px;border-bottom: 1px solid #D2D7E5;margin-bottom: 10px;}
+.Wrap_tree_cont .r_Box .box-white .title {padding-bottom: 10px;border-bottom: 1px solid #D2D7E5;margin-bottom: 10px;}
+.Wrap_tree_cont .r_Box .box-white .title .head20B {}
+.Wrap_tree_cont .r_Box .box-white .title .breadcrumb {margin-top:10px;}
 .Wrap_tree_cont .r_Box .box-white .box-in-form {display: flex; flex-wrap: wrap;}
 .Wrap_tree_cont .r_Box .box-white .box-in-form li {margin-top: 0; width: 50%;}
 .Wrap_tree_cont .r_Box .box-white .box-in-form li.w100 {width: 100%;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li .th {width: 120px;padding: 8px 16px;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form .th p {padding-left:10px;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li .td {padding: 8px 16px;word-break: break-all;}
+
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail { display: flex; flex-wrap: wrap; gap: 4px; width: calc(100% - 32px); margin: 16px;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail>.form-tit.tit2 { width: 100%; color: #222222; padding-left: 0;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail>.box-in-form { width: 100%;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail>.box-in-form>li {border-top:1px solid #fff;display: flex;gap: 16px;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail>.box-in-form li .form-tit.tit2 {width: 88px;color: #4F5A7E;padding: 16px 0 0 0;height: auto;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail>.box-in-form li .form-div {width:60%;display: flex;flex-grow: 1;padding: 14px 16px;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li {}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li  {
+    display: flex;
+    gap: 8px;
+    align-items:center;
+    width: auto;
+}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .body14R {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .ico {width:24px;height:24px;text-align:center;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .ico.person {
+    margin-right: -6px;
+}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .ico img {display:inline-block; vertical-align:middle;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .teamNm {
+    display: flex;
+    align-items: center;
+    display: flex;
+    gap: 10px;
+}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .teamNm>li:first-child:before {content:"";width:1px;height:18px;background:#D2D7E5;display: inline-block;vertical-align: middle;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .teamNm>li {color:#8E97B4;width: auto;gap: 10px;display: flex;align-items: center;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .teamNm>li:not(:last-child):after {content:"";width: 18px;height: 18px;display: inline-block;background: url(../images_admin/arr_auth.svg) no-repeat center;vertical-align: middle;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .teamNm>li:last-child {color:#2264DC; font-weight:700;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .teamNm>li:last-child:only-child {margin: 0 2px;margin-bottom: -4px;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .teamNm>li:last-child:before {display:none;}
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li .btn-del {background:url(../images_admin/ico_del.svg) no-repeat 0 0;}
+
+.Wrap_tree_cont .r_Box .box-white .box-in-form li.pay_detail .authList>li+li:before {content:"";width: 1px;height: 18px;background: #D2D7E5;display: inline-block;vertical-align: middle;margin: 0 16px;}
 
 .srch_portlet .btn_reset {width:56px;height:48px;background:#fff url(../images/svg/ico_reset.svg) no-repeat center center;border-radius:8px;border:1px solid var(--Grayscale-400);box-shadow: 0px 0px 8px 0px #0000000A;margin-left:10px;}
 
